src/test/deca/context/valid/cast_sub_sub_type.deca
class A{
    int x;
}
class B extends A{
    int y;
}
class C extends B{
    int z;
}
{
    A a = new A();
    C c = (C) (a); 
}
