src/test/deca/context/invalid/cast_sister.deca
class A{
    int x;
}
class B extends A{
    int y;
}
class C extends A{
    int z;
}
{
    B b = new B();
    C c = (C) (b); 
}
